After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747998 - gnome-builder doesn't build with clang because of return value error
gnome-builder doesn't build with clang because of return value error
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other FreeBSD
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-16 16:34 UTC by Ting-Wei Lan
Modified: 2015-04-16 18:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libide: fix "non-void function should return a value" (887 bytes, patch)
2015-04-16 16:37 UTC, Ting-Wei Lan
none Details | Review

Description Ting-Wei Lan 2015-04-16 16:34:57 UTC
Please see the patch. Some return values are missing in function ide_project_files_find_file.
Comment 1 Ting-Wei Lan 2015-04-16 16:37:28 UTC
Created attachment 301746 [details] [review]
libide: fix "non-void function should return a value"
Comment 2 Christian Hergert 2015-04-16 18:38:35 UTC
Feel free to just push fixes like this in the future.

Thanks!

Attachment 301746 [details] pushed as 3803b35 - libide: fix "non-void function should return a value"